welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:5: error: not found: value avancee
          for(b<-1 to 6) {avancee(); if (estFaceMur()) {poseBiscuit();}}
                          ^